<resources>
    <string name="app_name">NavGraphTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="view_consumption_history">View consumption history</string>
    <string name="calendar">Calendar</string>
    <string name="track_today_s_consumption">Track today\'s consumption</string>
    <string name="home">Home</string>
    <string name="create_and_edit_food_items">Create and edit food items</string>
    <string name="food">Food</string>
    <string name="submit">Submit</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_calorie_value">Enter Calorie Value</string>
    <string name="textview">TextView</string>
    <string name="create_new_item">Create New Item</string>
    <string name="create_new_category">Create New Category</string>
    <string name="edit_name">Edit Name</string>
    <string name="delete_category">Delete Category</string>
    <string name="calories">Calories</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="height_cm">Height (CM)</string>
    <string name="weight_kg">Weight (KG)</string>
    <string name="calculate_my_tdee">Calculate My TDEE</string>
    <string name="my_body_mass_index">My Body Mass Index</string>
    <string name="basal_metabolic_rate">Basal Metabolic Rate</string>
    <string name="total_daily_energy_expenditure">Total Daily Energy Expenditure</string>
    <string name="my_profile">My Profile</string>
    <string name="item_photo">item_photo</string>
    <string name="start_weight">Start Weight</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="goal_date">Goal Date</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="create_new_entry">Create new entry</string>
</resources>