<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/genderLabel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="8"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLabel" />

    <RadioButton
        android:id="@+id/rb_male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:checked="true"
        android:text="@string/male"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="238dp" />

    <RadioButton
        android:id="@+id/isFemale2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:text="@string/female"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="238dp" />

    <TextView
        android:id="@+id/genderLabel3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="8"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLabel" />

    <EditText
        android:id="@+id/input_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="8"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightLabel" />

    <TextView
        android:id="@+id/heightLabel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="8"
        android:text="@string/height_cm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_radio_group" />

    <EditText
        android:id="@+id/height2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="8"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightLabel" />

    <TextView
        android:id="@+id/startingWeightLabel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="8"
        android:text="@string/weight_kg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <EditText
        android:id="@+id/startingWeight2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="8"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startingWeightLabel" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8" />

    <Button
        android:id="@+id/btn_newitem_submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/red_imperial"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</LinearLayout>